Fix to prevent overlap of conditions and tooltip
Add some CSS to prevent conditions to hide beneath tooltip.
Hope it doesn't break anything

closes https://github.com/raithos/xwing/issues/1511

--- a/stylesheets/xwing.sass
+++ b/stylesheets/xwing.sass
@@ -102,6 +102,8 @@ strong em, em strong
     margin: 4px
   .dropdown-menu-right
     margin-right: 2px
+  .condition
+    width: 20em
 
 .flavor_text 
   display: none
